# sealed-bid-auction

./: .gitignore  Anchor.toml  DEPLOY.md
app/: next.config.js  package-lock.json  package.json  tailwind.config.js
app/.next/: react-loadable-manifest.json
app/.next/server/: middleware-react-loadable-manifest.js  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
app/.next/server/app/: page.js  page_client-reference-manifest.js
app/.next/server/vendor-chunks/: @coral-xyz.js  @magicblock-labs.js  @noble.js  @phala.js  @solana-mobile.js  @solana.js  @swc.js  @wallet-standard.js  asn1.js.js  base-x.js  bn.js.js  borsh.js  brorand.js  bs58.js  buffer-layout.js  bufferutil.js  camelcase.js  cross-fetch.js  date-fns.js  dijkstrajs.js  elliptic.js  eventemitter3.js  hash.js.js  hmac-drbg.js  inherits.js  jayson.js  minimalistic-assert.js  minimalistic-crypto-utils.js  next.js  node-fetch.js  node-gyp-build.js  pako.js  pngjs.js  rpc-websockets.js  safe-buffer.js  safer-buffer.js  toml.js  (+9 more)
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: AuctionRoom.tsx  BidForm.tsx  CreateAuction.tsx  LiveFeed.tsx  ResultPanel.tsx  WalletProvider.tsx
app/src/idl/: sealed_bid_auction.json
app/src/lib/: constants.ts  magicblock.ts  program.ts
programs/sealed-bid-auction/: Cargo.toml
programs/sealed-bid-auction/src/: errors.rs  lib.rs  state.rs
programs/sealed-bid-auction/src/instructions/: cancel_auction.rs  close_auction.rs  create_auction.rs  create_bid_permission.rs  delegate.rs  init_bid.rs  mod.rs  place_bid.rs  settle.rs
(+15 files in other folders)
