[package]
name = "sealed-bid-auction"
version = "0.1.0"
description = "Private sealed-bid auction using MagicBlock Private Ephemeral Rollups (TEE)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sealed_bid_auction"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1" }
# MagicBlock Ephemeral Rollups SDK — provides delegation + commit primitives
# "disable-realloc" avoids the realloc hook which conflicts with some setups
ephemeral-rollups-sdk = { version = "0.6.5", features = ["anchor", "disable-realloc"] }
sha2 = "0.10"
